# rlm-core

./: .contextignore  .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: metadata.json
docs/: ARCHITECTURE.md
openspec/: project.md
openspec/changes/add-01-runtime-walking-skeleton/: design.md  tasks.md
openspec/changes/add-02-generic-helper-baseline/: tasks.md
openspec/changes/add-03-adapter-spi-and-selection/: design.md  proposal.md  tasks.md
openspec/changes/add-04-core-index-model/: tasks.md
openspec/changes/add-05-core-index-lifecycle/: design.md  proposal.md  tasks.md
openspec/changes/add-06-workspace-registry/: tasks.md
openspec/changes/add-07-bsl-live-adapter/: tasks.md
openspec/changes/add-08-bsl-prebuilt-index/: proposal.md  tasks.md
openspec/changes/add-09-bsl-advanced-analysis/: design.md  proposal.md  tasks.md
openspec/changes/add-10-public-api-surface/: design.md  tasks.md
openspec/changes/add-11-quality-evals-and-safety/: design.md  tasks.md
openspec/changes/add-12-go-second-adapter/: tasks.md
openspec/changes/add-13-cross-adapter-hardening/: design.md  proposal.md  tasks.md
openspec/changes/add-14-analysis-authority-model/: design.md  proposal.md  tasks.md
src/rlm_core/: __init__.py  cli.py  evals.py  public_api.py  workspace.py
tests/: go_fixture.py  test_adapters.py  test_bsl_adapter.py  test_cross_adapter_contracts.py  test_generic_helpers.py  test_go_adapter.py  test_index_manager.py  test_index_model.py  test_public_api.py  test_quality_evals.py  test_runtime.py  test_sandbox_safety.py  test_workspace.py
(+88 files in other folders)
