[project]
name = "rlm-core"
version = "0.1.0"
description = "Core runtime for indexed repository-level machine-coding tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Egor" },
]
dependencies = []

[project.scripts]
rlm-core = "rlm_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm_core"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
